fix: re-enable Spring Security CSRF protection and implement patient app features