@@ -16,6 +16,7 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.header.writers.ReferrerPolicyHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -32,8 +33,12 @@ public class SecurityConfig {
     private final RateLimitingFilter rateLimitingFilter;
     private final TenantContextFilter tenantContextFilter;
 
-    @Value("${cors.allowed-origins:http://localhost:5173,http://localhost:3000,http://localhost:4000,http://127.0.0.1:5173,http://127.0.0.1:3000}")
+    @Value("${cors.allowed-origins:http://localhost:5173,http://localhost:3000}")
     private String allowedOrigins;
+
+    /** Controls Swagger UI / OpenAPI doc exposure. Set SWAGGER_ENABLED=false in production. */
+    @Value("${swagger.enabled:true}")
+    private boolean swaggerEnabled;
 
     public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter,
                           RateLimitingFilter rateLimitingFilter,
@@ -45,34 +50,102 @@ public class SecurityConfig {
 
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
+        return new BCryptPasswordEncoder(12); // work factor 12 (default 10)
     }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .csrf(AbstractHttpConfigurer::disable)
             .headers(headers -> headers
+                // ── Clickjacking protection ──────────────────────────────────
                 .frameOptions(frame -> frame.deny())
-                .xssProtection(xss -> xss.disable())
+
+                // ── XSS protection ───────────────────────────────────────────
+                // Note: modern browsers use CSP instead, but keep this for older clients
+                .xssProtection(xss -> xss.disable()) // deprecated header; CSP is the correct control
+
+                // ── MIME sniffing protection ──────────────────────────────────
+                .contentTypeOptions(ct -> {})
+
+                // ── HSTS (HTTPS enforcement) ──────────────────────────────────
+                .httpStrictTransportSecurity(hsts -> hsts
+                    .includeSubDomains(true)
+                    .maxAgeInSeconds(31_536_000)
+                    .preload(true)
+                )
+
+                // ── Content Security Policy ────────────────────────────────────
                 .contentSecurityPolicy(csp -> csp.policyDirectives(
-                    "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https:; connect-src 'self' ws: wss: http: https:;"
+                    "default-src 'self'; " +
+                    "script-src 'self' 'unsafe-inline' 'unsafe-eval' " +
+                        "https://cdn.tailwindcss.com https://cdn.jsdelivr.net; " +
+                    "style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; " +
+                    "font-src 'self' https://fonts.gstatic.com data:; " +
+                    "img-src 'self' data: https:; " +
+                    "connect-src 'self' ws: wss: http: https:; " +
+                    "frame-ancestors 'none';"  // equivalent to X-Frame-Options: DENY
                 ))
-                .httpStrictTransportSecurity(hsts -> hsts.includeSubDomains(true).maxAgeInSeconds(31536000))
+
+                // ── Referrer policy ───────────────────────────────────────────
+                .referrerPolicy(referrer -> referrer
+                    .policy(ReferrerPolicyHeaderWriter.ReferrerPolicy.STRICT_ORIGIN_WHEN_CROSS_ORIGIN))
+
+                // ── Permissions policy ────────────────────────────────────────
+                // Restricts access to sensitive browser APIs
+                .permissionsPolicy(pp -> pp.policy(
+                    "geolocation=(), camera=(), microphone=(), payment=(), usb=(), " +
+                    "accelerometer=(), gyroscope=(), magnetometer=()"
+                ))
             )
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/", "/index.html", "/favicon.ico", "/*.jpg", "/*.jpeg", "/*.png", "/*.svg", "/*.ico", "/*.json", "/manifest.webmanifest", "/*.webmanifest", "/static/**", "/css/**", "/js/**", "/assets/**", "/fonts/**", "/portal/**", "/app/**", "/doctor/**", "/patient/**", "/admin/**", "/super-admin/**", "/_vercel/**", "/sw.js", "/registerSW.js", "/workbox-*.js").permitAll()
-                .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers("/api/health").permitAll()
-                .requestMatchers("/api/system/status").permitAll()
-                .requestMatchers("/api/super-admin/unlock").permitAll()
-                .requestMatchers("/api/prescriptions/slip/**").permitAll()
-                .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-ui.html").permitAll()
-                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                .anyRequest().authenticated()
-            )
+            .authorizeHttpRequests(auth -> {
+                auth
+                    // ── Static assets (EMR frontend SPA) ─────────────────────
+                    .requestMatchers(
+                        "/", "/index.html", "/favicon.ico",
+                        "/*.jpg", "/*.jpeg", "/*.png", "/*.svg", "/*.ico", "/*.json",
+                        "/manifest.webmanifest", "/*.webmanifest",
+                        "/static/**", "/css/**", "/js/**", "/assets/**", "/fonts/**",
+                        "/portal/**", "/app/**", "/doctor/**", "/patient/**",
+                        "/admin/**", "/super-admin/**", "/_vercel/**",
+                        "/sw.js", "/registerSW.js", "/workbox-*.js"
+                    ).permitAll()
+
+                    // ── Authentication endpoints ──────────────────────────────
+                    .requestMatchers("/api/auth/**").permitAll()
+
+                    // ── System / health ───────────────────────────────────────
+                    .requestMatchers("/api/health").permitAll()
+                    .requestMatchers("/api/system/**").permitAll()
+
+                    // ── Super admin unlock (uses secret key in service layer) ──
+                    .requestMatchers(HttpMethod.POST, "/api/super-admin/unlock").permitAll()
+
+                    // ── Prescription public slip (token-based public link) ─────
+                    .requestMatchers("/api/prescriptions/slip/**").permitAll()
+
+                    // ── Patient app public endpoints ──────────────────────────
+                    .requestMatchers("/api/mobile/doctors", "/api/mobile/doctors/**").permitAll()
+                    .requestMatchers("/api/mobile/health-tips").permitAll()
+
+                    // ── Swagger / OpenAPI (disabled in production via env var) ─
+                    .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-ui.html")
+                    .access((authentication, context) -> {
+                        // Always allow OPTIONS for CORS preflight
+                        if (context.getRequest().getMethod().equals("OPTIONS")) {
+                            return new org.springframework.security.authorization.AuthorizationDecision(true);
+                        }
+                        boolean allowed = swaggerEnabled;
+                        return new org.springframework.security.authorization.AuthorizationDecision(allowed);
+                    })
+
+                    // ── CORS preflight ────────────────────────────────────────
+                    .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                    // ── Everything else requires authentication ────────────────
+                    .anyRequest().authenticated();
+            })
             .addFilterBefore(tenantContextFilter, UsernamePasswordAuthenticationFilter.class)
             .addFilterBefore(rateLimitingFilter, UsernamePasswordAuthenticationFilter.class)
             .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
@@ -83,10 +156,19 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+
+        // Parse comma-separated origins from env var
+        List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isBlank())
+                .toList();
         configuration.setAllowedOrigins(origins);
+
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-CSRF-Token", "X-Requested-With", "Accept"));
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization", "Content-Type", "X-CSRF-Token",
+                "X-Requested-With", "Accept", "X-Hospital-Code"));
+        configuration.setExposedHeaders(List.of("X-Request-Id")); // allows clients to read request IDs
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
